wip: added post /appointments /put /appointments/id tests
