# app/models/user.rb
@@ -12,9 +12,9 @@ class User < ApplicationRecord
   
   def all_appointments
     appointments
-    .joins('INNER JOIN users ON users.id = appointments.user_id
+      .joins('INNER JOIN users ON users.id = appointments.user_id
             INNER JOIN doctors on doctors.id = appointments.doctor_id')
-    .select('users.username, users.email,
+      .select('users.username, users.email,
             doctors.firstname as doctor_firstname,
             doctors.lastname as doctor_lastname,
             doctors.email as doctor_email,
